# Frostify

./: .gitignore  Cargo.toml  README.md  build.rs
assets/logo/: preview.html
assets/shaders/: blit.wgsl  color.wgsl
debug/: README.md  home.json  run.ps1  run.sh
frostify_derive/: Cargo.toml
frostify_derive/src/: lib.rs
src/: album_art.rs  api.rs  app.rs  asset.rs  canvas.rs  cluster_listener.rs  color.rs  constants.rs  debug_config.rs  disk_cache.rs  errors.rs  extracted_color.rs  hotreload.rs  img_utils.rs  local_player.rs  main.rs  null_sink.rs  prefs.rs  spirc_bootstrap.rs  spotify_session.rs  text_renderer.rs  utils.rs  vertex.rs  video.rs  wgpu_ctx.rs  worker.rs
src/app/: cx.rs  frame.rs  mod.rs  reducer.rs  state.rs
src/auth/: mod.rs  oauth.rs  token_manager.rs
src/components/: bounds.rs  button.rs  container.rs  image.rs  label.rs  mod.rs  root.rs  window_controls.rs
src/components/core/: background.rs  button.rs  container.rs  image.rs  mod.rs  root.rs  text.rs
src/core/: worker.rs
src/model/: art.rs  auth.rs  backdrop.rs  canvas.rs  devices.rs  library.rs  membership.rs  menu.rs  mod.rs  player.rs  prefs.rs  router.rs  settings.rs
src/shaders/: color.wgsl  shader.wgsl
src/test/: image_scaling.rs  layout.rs  layout_tests.rs  mod.rs  test_utils.rs  z_index.rs  z_index_tests.rs
src/ui/: animation.rs  asset.rs  chrome.rs  color.rs  component.rs  component_update.rs  geometry.rs  home.rs  icon.rs  img_utils.rs  layout.rs  login.rs  mod.rs  navbar.rs  playlist.rs  settings.rs  text_renderer.rs  theme.rs  tokens.rs  z_index_manager.rs
src/ui/components/: background.rs  button.rs  component_builder.rs  container.rs  image.rs  label.rs  mod.rs  slider.rs
src/ui/components/core/: background_color.rs  background_gradient.rs  component.rs  frosted_glass.rs  image.rs  mod.rs  text.rs
src/ui/ecs/: components.rs  integration.rs  mod.rs  resources.rs  systems.rs
src/ui/ecs/builders/: background.rs  button.rs  container.rs  image.rs  mod.rs  modal.rs  text.rs
src/ui/ecs/systems/: animation.rs  mod.rs  modal.rs  mouse.rs  render.rs
src/ui/shaders/: color.wgsl  texture.wgsl
src/views/: login.rs  mod.rs  setup.rs
src/views/home/: artist.rs  context_menu.rs  devices.rs  like_menu.rs  main_pane.rs  mod.rs  now_playing.rs  player_bar.rs  playlist.rs  queue.rs  settings.rs  show_all.rs  sidebar.rs  top_bar.rs
src/widgets/: button.rs  chip.rs  chrome.rs  color.rs  component.rs  crossfade.rs  icon.rs  mod.rs  splitter.rs  thumb.rs  tokens.rs
