[package]
name = "frostify"
version = "0.1.0"
edition = "2024"

[dependencies]
frostify-gfx = { path = "../frostify-gfx" }
log = "0.4"
env_logger = "0.11"

# Auth + HTTP
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
oauth2 = { version = "5", features = ["rustls-tls"], default-features = false }
base64 = "0.22"
sha2 = "0.10"
rand = "0.9"
webbrowser = "1"

# Token persistence
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native"] }
